# mink

./: .gitignore  CHANGELOG.md  CLAUDE.md  HUMAN.md  LICENSE  README.md  VERIFICATION.md  build.gradle.kts  keystore.properties.example  review-workflow.js  settings.gradle.kts
.github/workflows/: android.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/androidTest/java/com/mink/: DnsFlowMonitorInstrumentedTest.kt  HighRiskScannerInstrumentedTest.kt  LlmEngineInstrumentedTest.kt  LocalNetworkProviderInstrumentedTest.kt  NetworkUsageScannerInstrumentedTest.kt  OnboardingSmokeTest.kt  SensorInUseMonitorInstrumentedTest.kt  SmokeTest.kt
app/src/androidTest/java/com/mink/guardian/: GuardianStoreMigrationTest.kt  PayloadCipherInstrumentedTest.kt
app/src/androidTest/java/com/mink/monitor/: AppAccessScannerInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: trackers.txt
app/src/main/cpp/: CMakeLists.txt  README.md  mink_llm.cpp
app/src/main/java/com/mink/: MainActivity.kt  MinkApplication.kt
app/src/main/java/com/mink/companion/: CompanionBubble.kt  CompanionContract.kt  CompanionController.kt  CompanionOverlayService.kt  CompanionRemark.kt  MinkSprite.kt  (+2 more)
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/xml/: backup_rules.xml  data_extraction_rules.xml  file_paths.xml
docs/: ARCHITECTURE.md  ROADMAP.md  guardian-core.md  memory-architecture.md
docs/design/: guardian-core-refactor.md
gradle/: libs.versions.toml
guardian-core/: build.gradle.kts
(+193 files in other folders)
